--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,8 @@
   box-sizing: border-box;
   font-family: "Outfit";
 }
+
+#root {
+  min-height: 100vh;
+  background: var(--Dark-Blue, #10141e);
+}
